<resources>
    <string name="app_name">KeenBrace</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="save">save</string>
    <string name="apply">confirm</string>
    <string name="back">back</string>
    <string name="login">login</string>
    <string name="register">sign up</string>
    <string name="forget_pwd">forget password?</string>
    <string name="login_hint">请使用账户登录</string>
    <string name="input_account_hint">请输入账户/手机/邮箱</string>
    <string name="input_pwd_hint">请输入密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="next_page">next</string>
    <string name="back_to_pre_page">previous</string>
    <string name="input_userinfo">personal info</string>
    <string name="name">name</string>
    <string name="gender">gender</string>
    <string name="birthday">birth</string>
    <string name="email">email</string>
    <string name="mobile">phone</string>
    <string name="modify_pwd">reset password</string>
    <string name="input_bind_mobile">input phone number</string>
    <string name="input_dynamic_pwd">dynamic password</string>
    <string name="reister_now">sign up</string>
    <string name="obtain_daynamic_pwd">get dynamic password</string>
    <string name="is_lastest_version">当前为最新版本</string>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string name="new_message_notification_title_template">New message: %1$s</string>
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="bp_template">Step Rate</string>
    <string name="bf_template">Stride</string>
    <string name="bt_template">Time</string>
    <string name="bs_template">Steps</string>
    <string name="run_result">您本次阶段的步频%1$s/min,步幅%2$s/度时间%3$s\n根据运动纪录的分析</string>
    <string name="ble_conn_sucess">connected</string>
    <string name="ble_conned_msg">KeenBrace connected</string>
    <string name="ble_conn_hit">Please connect KeenBrace</string>
    <string name="ble_conning">connecting...</string>
    <string name="ble_stete_conning">connecting...</string>
    <string name="device">device</string>
    <string name="run_times">%1$s次\n运动次数</string>
    <string name="total_mileage">%1$s\nTotal(km)</string>
    <string name="pj_template">Score</string>
    <string name="jl_template">Distance  </string>
    <string name="time_template">Time</string>
    <string name="run_before">运动前热身</string>
    <string name="howto_run">如何正确运动</string>
    <string name="run_end">运动后放松</string>
    <string name="home_page">home</string>
    <string name="tab_history">history</string>
    <string name="tab_mainpage">my</string>
    <string name="height_template">%1$s\nheight(CM)</string>
    <string name="age_template">%1$s\nage</string>
    <string name="weight_template">%1$s\nweight(KG)</string>
    <string name="assess_wave">运动评价线</string>
    <string name="sex_boy">male</string>
    <string name="sex_girl">female</string>
    <string name="sex">gender</string>
    <string name="nickname">nickname</string>
    <string name="height">height(cm)</string>
    <string name="weight">weight(kg)</string>
    <string name="age">age</string>
    <string name="summary">&#160;&#160;个人简介</string>
    <string name="you">你</string>
    <string name="player">运动员</string>
    <string name="xgsl_wave">膝盖受力波形对比</string>
    <string name="acc_wave">肌肉体能波形</string>
    <string name="jld_wave">脚落地中心波形</string>
    <string name="bp_wave">步频波形</string>
    <string name="bf_wave">步幅波形</string>
    <string name="peisu">配速</string>
    <string name="t_run">跑步</string>
    <string name="t_walk">步行</string>
    <string name="t_climb">爬山</string>
    <string name="tx_finish">完成</string>
    <string name="back_main">返回主界面</string>
    <string name="menu_title">智能护膝</string>
    <string name="tx_local">本地上传</string>
    <string name="tx_online">在线拍摄</string>
    <string name="btn_continue">继续</string>
    <string name="btn_end">end</string>
    <string name="btn_start">beginning workout</string>
    <string name="btn_pause">pause</string>
    <string name="tx_save_success">Saved!</string>
    <string name="tx_loading">loading...</string>
    <string name="nobel_hit">亲爱的用户你还没有连接智\n能护膝不能进行此项操作</string>
    <string name="nodevice">no device</string>
    <string name="goto_conn">link</string>
    <string name="share_to">share to</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="ble_dis_hit">KeenBrace disconnect</string>
    <string name="btn_confirm">confirm</string>
    <string name="zlbq_hit">亲爱的用户为了更好的配合您\n的运动请配合把资料填写完整哦~</string>
    <string name="title_activity_number_select">NumberSelectActivity</string>
    <string name="localtrim">crop</string>
    <string name="cannotfindsdcard">no storage to save picture</string>
    <string name="headimageuploadsuccess">upload success</string>
    <string name="title_activity_know_two">KnowTwoActivity</string>
    <string name="title_activity_know_three">KnowThreeActivity</string>
    <string name="ble_conn">connected</string>
    <string name="ble_disconn">disconnect</string>
    <string name="ble_disovered">service found</string>
    <string name="title_activity_read_data">ReadDataActivity</string>
    <string name="title_activity_language">LanguageActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_userfeedback">UserfeedbackActivity</string>
    <string name="title_activity_vesion">VesionActivity</string>
    <string name="title_activity_sys_data">SysDataActivity</string>
    <string name="title_activity_logo">LogoActivity</string>
    <string name="slide_finish_running">滑动结束跑步</string>
    <string name="slide_finish_running_arrow">> ></string>
    <string name="ok">confirm</string>
    <string name="remind">Remind</string>
    <string name="sureexit">Are you sure you want to quit?</string>
    <string name="sureEnd">Are you sure you want to end workout?</string>
    <string name="sure">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_show_waring">ShowWaringActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_view_record">ViewRecordActivity</string>
    <string name="hit_name">name</string>
    <string name="hit_email">email</string>
    <string name="hit_mobile">phone number</string>
    <string name="tx_userinfo"><![CDATA[ BASIC INFO]]></string>
    <string name="lf_about">about us</string>
    <string name="tx_sex">gender</string>
    <string name="tx_weight">weight</string>
    <string name="tx_running">Running</string>
    <string name="tx_squat">Squat</string>
    <string name="tx_dumbbell">Dumbbell</string>
    <string name="tx_plank">Plank</string>
    <string name="tx_pullup">Pullups</string>
    <string name="tx_pushup">Pushups</string>
    <string name="tx_bicyclesitup">Bicycle Sit up</string>
    <string name="tx_dumbbellsquat">Dumbbells Squat</string>
    <string name="tx_train_target">Target</string>
    <string name="tx_indicate_tap">Tap here to see the move</string>
    <string name="tx_run_equipment">None</string>
    <string-array name="week_name">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>
    <string name="tx_running_welcome">Let\'s go!</string>
    <string name="tx_relax_smooth">Relaxed, smooth, quick, and efficient</string>
    <string name="tx_forward_lean">Slight forward lean from ankles</string>
    <string name="tx_increase_cadence">increase your cadence</string>
    <string name="tx_decrease_stride">decrease your stride</string>
    <string name="tx_land_softer">land softer</string>
    <string name="tx_hip_energy">Knee drive and back kick come from hip drive and extension</string>
    <string name="tx_avoid_bouncing">avoid bouncing</string>
    <string name="tx_enhance_stability">enhance your stability</string>
    <string name="tx_lift_faster">lift your foot faster</string>
    <string name="tx_reach_toomuch">your legs are reaching forward too much</string>
    <string name="tx_unfold_leg">let your leg unfold underneath you</string>
    <string name="tx_strike_closer">bring your foot strikes closer to your body</string>
    <string name="tx_land_underneath">Foot lands underneath center of gravity</string>
    <string name="tx_energy_forward">All energy goes towards forward propulsion</string>
    <string name="tx_take_rest">take some rest and relax</string>
    <string name="tx_spring_toe">spring off the ground with your toes</string>
    <string name="tx_dont_sprint">too much sprint</string>
    <string name="tx_run_sum_time">you have been running for</string>
    <string name="tx_hour">hour</string>
    <string name="tx_minute">minutes</string>
    <string name="tx_second">seconds</string>
    <string name="tx_kilometer">kilometers</string>
    <string name="tx_miles">miles</string>
    <string name="tx_report_cadence">your cadence is</string>
    <string name="tx_every">every</string>
    <string name="tx_per">per</string>
    <string name="tx_report_distance">distance</string>
    <string name="tx_report_speed">your speed is</string>
    <string name="tx_report_gforce">your g force is</string>
    <string name="tx_sprint">sprint at your full speed</string>
    <string name="tx_stand_still"></string>
    <string name="tx_goodrunform">Good running form</string>
    <string name="tx_arm_swing">Strong arms swinging waist to nipple</string>
    <string name="tx_walking">Walking</string>
    <string name="tx_suggest_1">start running</string>
    <string name="tx_suggest_2">I found your are walking</string>
    <string name="tx_suggest_3">Move</string>
    <string name="tx_suggest_4">Run, Forest Run</string>
    <string name="tx_suggest_5">You can do better than this</string>
    <string name="tx_next_workout">next workout is</string>
    <string name="tx_inform_1">prepare for your next session</string>
    <string name="tx_dont_swing">don\'t swing</string>
    <string name="tx_slower">slower</string>
    <string name="tx_keepstable">keep your motion stable</string>
    <string name="tx_liftup">lift all the way up</string>
    <string name="tx_squat_stand">straighten up and pull your head and shoulders back.</string>
    <string name="tx_kneeback">keep your knees back</string>
    <string name="tx_deeper">go deeper</string>
    <string name="tx_chestup">chest up and look forward</string>
    <string name="tx_encourage_1">keep it up</string>
    <string name="tx_encourage_2">you are doing great</string>
    <string name="tx_encourage_3">don\'t stop</string>
    <string name="tx_encourage_4">you can do it</string>
    <string name="tx_encourage_5">push it</string>
</resources>