<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@mipmap/open_ble_bg">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:textColor="@color/font_back"
        android:text="@string/nobel_hit" />

    <LinearLayout
        android:id="@+id/rl_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView1"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_noble"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#fc9a4f"
            android:text="@string/nodevice" />

        <TextView
            android:id="@+id/tv_conn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#28bebc"
            android:text="@string/goto_conn" />
    </LinearLayout>

</RelativeLayout>