<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/space_35"
    android:paddingRight="@dimen/space_35"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bg_color"
    tools:context="com.zrq.lifepower.activity.ModifyPwdActivity">
    <TextView
        style="@style/wrap_wrap"
        android:textSize="@dimen/text_size_22"
        android:textColor="@color/white"
        android:text="@string/modify_pwd"
        />
    <LinearLayout
        style="@style/match_wrap"
        android:paddingLeft="@dimen/space_25"
        android:paddingRight="@dimen/space_25"
        android:paddingTop="@dimen/space_10"
        android:paddingBottom="@dimen/space_10"
        android:layout_marginTop="@dimen/space_35"
        android:layout_marginBottom="@dimen/space_10"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/ll_login_input_corners_bg" >
        <ImageView
            style="@style/wrap_wrap"
            android:contentDescription="@null"
            android:src="@mipmap/icon_pwd"
            />
        <EditText
            android:id="@+id/et_pwd"
            style="@style/weight_wrap"
            android:background="@null"
            android:textColor="@color/gray_a1"
            android:textSize="@dimen/text_size_15"
            android:inputType="textPassword"
            android:hint="@string/input_pwd_hint"

            android:lines="1"
            android:textCursorDrawable="@drawable/cursor_comon"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/match_wrap"
        android:paddingLeft="@dimen/space_25"
        android:paddingRight="@dimen/space_25"
        android:paddingTop="@dimen/space_10"
        android:paddingBottom="@dimen/space_10"
        android:layout_marginBottom="@dimen/space_5"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/ll_login_input_corners_bg" >
        <ImageView
            style="@style/wrap_wrap"
            android:contentDescription="@null"
            android:src="@mipmap/icon_pwd"
            />
        <EditText
            android:id="@+id/et_pwd_again"
            style="@style/weight_wrap"
            android:background="@null"
            android:textColor="@color/gray_a1"
            android:textSize="@dimen/text_size_15"
            android:inputType="textPassword"
            android:hint="@string/input_pwd_again"

            android:lines="1"
            android:textCursorDrawable="@drawable/cursor_comon"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_register"
        style="@style/match_wrap"
        android:paddingTop="@dimen/space_5"
        android:paddingBottom="@dimen/space_15"
        android:textSize="@dimen/text_size_16"

        android:text="@string/reister_now"
        />
    <Button
        android:id="@+id/btn_apply"
        style="@style/match_wrap"
        android:layout_marginTop="@dimen/space_25"
        android:background="@drawable/btn_login_corners_bg"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/apply"
        />



</LinearLayout>
