<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/history_record"
    android:orientation="vertical"
    android:weightSum="5">

    <TextView
        android:id="@+id/tv_startTime"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="6dp"
        android:text="2015-07-18 18:00:00"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/tx_pj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time_template"
            android:textColor="#3f4247" />

        <TextView
            android:id="@+id/tv_bp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bp_template"
            android:textColor="#3f4247" />

        <TextView
            android:id="@+id/tv_jl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/jl_template"
            android:textColor="#3f4247" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time_template"
            android:textColor="#3f4247" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_goto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_showdetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:src="@mipmap/show_detail" />

        <ImageView
            android:id="@+id/iv_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@mipmap/show_go" />
    </RelativeLayout>

</LinearLayout>