<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/space_5"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        style="@style/match_wrap"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/space_5"
        android:layout_marginBottom="@dimen/space_5"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="@dimen/space_5"
            android:src="@mipmap/default_avatar" />
        <TextView
            android:id="@+id/tv_account"
            style="@style/wrap_wrap"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#d1d1d1"
        />

    <TextView
        style="@style/match_wrap"
        android:textSize="@dimen/text_size_22"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/space_5"
        android:layout_marginBottom="@dimen/space_5"
        android:text="个人信息"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <LinearLayout
                style="@style/match_wrap"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <ImageView
                    style="@style/wrap_wrap"
                    android:layout_margin="@dimen/space_5"
                    android:contentDescription="@null"
                    android:src="@mipmap/icon_more_name"
                    />
                <TextView
                    style="@style/wrap_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/gray_33"
                    android:text="@string/name"
                    />
                <TextView
                    android:id="@+id/tv_name"
                    style="@style/weight_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:gravity="right"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/match_wrap"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <ImageView
                    style="@style/wrap_wrap"
                    android:layout_margin="@dimen/space_5"
                    android:contentDescription="@null"
                    android:src="@mipmap/icon_more_gender"
                    />
                <TextView
                    style="@style/wrap_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/gray_33"
                    android:text="@string/gender"
                    />
                <TextView
                    android:id="@+id/tv_gender"
                    style="@style/weight_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:gravity="right"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/match_wrap"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <ImageView
                    style="@style/wrap_wrap"
                    android:layout_margin="@dimen/space_5"
                    android:contentDescription="@null"
                    android:src="@mipmap/icon_more_birthday"
                    />
                <TextView
                    style="@style/wrap_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/gray_33"
                    android:text="@string/birthday"
                    />
                <TextView
                    android:id="@+id/tv_birthday"
                    style="@style/weight_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:gravity="right"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/match_wrap"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <ImageView
                    style="@style/wrap_wrap"
                    android:layout_margin="@dimen/space_5"
                    android:contentDescription="@null"
                    android:src="@mipmap/icon_more_email"
                    />
                <TextView
                    style="@style/wrap_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/gray_33"
                    android:text="@string/email"
                    />
                <TextView
                    android:id="@+id/tv_email"
                    style="@style/weight_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:gravity="right"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/match_wrap"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <ImageView
                    style="@style/wrap_wrap"
                    android:layout_margin="@dimen/space_5"
                    android:contentDescription="@null"
                    android:src="@mipmap/icon_more_mobile"
                    />
                <TextView
                    style="@style/wrap_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/gray_33"
                    android:text="@string/mobile"
                    />
                <TextView
                    android:id="@+id/tv_mobile"
                    style="@style/weight_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:gravity="right"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/match_wrap"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <ImageView
                    style="@style/wrap_wrap"
                    android:layout_margin="@dimen/space_5"
                    android:contentDescription="@null"
                    android:src="@mipmap/icon_more_height"
                    />
                <TextView
                    style="@style/wrap_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/gray_33"
                    android:text="@string/height"
                    />
                <TextView
                    android:id="@+id/tv_height"
                    style="@style/weight_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:gravity="right"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/match_wrap"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <ImageView
                    style="@style/wrap_wrap"
                    android:layout_margin="@dimen/space_5"
                    android:contentDescription="@null"
                    android:src="@mipmap/icon_more_weight"
                    />
                <TextView
                    style="@style/wrap_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/gray_33"
                    android:text="@string/weight"
                    />
                <TextView
                    android:id="@+id/tv_weight"
                    style="@style/weight_wrap"
                    android:textSize="@dimen/text_size_16"
                    android:gravity="right"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        style="@style/match_wrap"
        android:layout_marginTop="@dimen/space_5"
        android:gravity="bottom"
        >
        <TextView
            android:id="@+id/tv_edit"
            style="@style/wrap_wrap"
            android:layout_marginTop="@dimen/space_5"
            android:layout_marginBottom="@dimen/space_5"
            android:textSize="@dimen/text_size_15"
            android:gravity="center_vertical"
            android:text="修改个人资料"
            />
        <View
            android:id="@+id/line_bottom"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/tv_edit"
            android:background="#d1d1d1"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/tv_settings"
            style="@style/wrap_wrap"
            android:layout_below="@id/line_bottom"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/space_5"
            android:layout_marginBottom="@dimen/space_5"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_15"
            android:text="设置"
            />
    </RelativeLayout>


</LinearLayout>

